fix for no buildable files in the root

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ install:
 script:
   - cd $HOME/gopath/src/github.com/teamwork/middleware
 
-  - go test -race -cover -covermode=set -coverprofile=coverage.txt && bash <(curl -s https://codecov.io/bash)
+  - go test $(go list ./... | grep -v /vendor/) -race
   - gometalinter.v1 --config .linter_test.json
   - gometalinter.v1 --config .linter.json
