--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: go
 go:
   - 1.9.x
+go_import_path: github.com/teamwork/middleware
+notifications:
+  email: false
 cache:
   directories:
     - $HOME/gopath/pkg
