Add some tests, documentation for cache, contenttype
- Rename `cache.Disable()` to `cache.NoCache()` and document what it
  does. many people are confused between what `no-cache` and `no-store`
  does.

- Accept options for the `contenttypeMiddleware`; this also makes
  `jsonMiddleware` obsolete, since we can just use this middleware with
  different options now. Maybe we can add a convenience wrapper for it
  if we want.

Add tests for it all.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/teamwork/log"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/teamwork/test"
