Add some tests, documentation for cache, contenttype (#4)
* Add some tests, documentation for cache, contenttype

- Rename `cache.Disable()` to `cache.NoCache()` and document what it
  does. many people are confused between what `no-cache` and `no-store`
  does.

- Accept options for the `contenttypeMiddleware`; this also makes
  `jsonMiddleware` obsolete, since we can just use this middleware with
  different options now. Maybe we can add a convenience wrapper for it
  if we want.

Add tests for it all.

* Small changes to reduce dependencies

From:

	41M     vendor/

to:

	13M     vendor/

I know, now we're not npm cool, but we'll just have to suffer that I'm
afraid :-(

* fix lint

* Add all package-level docs

* don't need this extra type conversion actually

* Use http.Handler instea of http.HandlerFunc

This allows us to use echo's `WrapMiddleware`

* Use exact check for content-type

Otherwise e.g. `application/jsonextra` will work. Not sure why this was
a `strings.Contains()`

* Add JSON shortcut

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,9 +38,9 @@
   version = "0.8.0"
 
 [[constraint]]
-  name = "github.com/spf13/viper"
-  version = "1.0.0"
+  branch = "master"
+  name = "github.com/teamwork/log"
 
 [[constraint]]
   branch = "master"
-  name = "github.com/teamwork/log"
+  name = "github.com/teamwork/test"
