--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
 language: go
 go:
-  - 1.9.x
+  - 1.11.x
 go_import_path: github.com/teamwork/middleware
 notifications:
   email: false
   webhooks: http://tw-bot.teamworkops.com:8182/travis/buildstatus
-install:
-  - ./bin/setup-travis
-script:
-  - cd $HOME/gopath/src/github.com/teamwork/middleware
-  - ./bin/test
-  - ./bin/coverage
-  - ./bin/lint
+cache:
+  directories:
+    - $HOME/.cache/go-build
+    - $HOME/gopath/bin
+
+install: |
+  ./bin/setup-travis
+
+script: |
+  set -e
+  cd $HOME/gopath/src/github.com/teamwork/middleware
+  [ -f go.sum ] && export GO111MODULE=on ||:
+  ./bin/coverage -race ./...
+  env GO111MODULE=off ./bin/lint ./...
+
+before_cache: |
+  rm "$HOME/.cache/go-build/log.txt"
